# mdo-libre

./: .env copy  .gitignore  README.md  pyproject.toml
models/: model.pkl
notebooks/: 00_prepare_data.ipynb  01_eda.ipynb  02_modelado.ipynb  03_explicabilidad.ipynb
scripts/: new_or_used.py
