[tool.poetry]
name = "mdolibre"
version = "0.1.0"
description = "Prueba mdo libre"
authors = ["jjovalle99 <jj.ovalle@uniandes.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
fastparquet = "^2024.5.0"
matplotlib = "^3.9.1"
scipy = "^1.14.0"
wordcloud = "^1.9.3"
pandas = "^2.2.2"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"


[tool.poetry.group.format.dependencies]
ruff = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 130